# Mini-Serpent-Engine

./: .gitignore  CMakeLists.txt  MiniSerpentEngine_private.h  NEWS.md  README.md
examples/: CMakeLists.txt  chalkboard.cpp  dungeontris.cpp  lesta-autobattler.cpp  proto-snake.cpp  sandbox.cpp
examples/dungeontris/: data-loader.cpp  data-loader.h  game-data.h  game-fwd.h  game.cpp  gamestates.cpp  gamestates.h  layers.cpp  layers.h
examples/lesta-autobattler/: data-loader.cpp  data-loader.h  fwd.h  game-data.h  game-fwd.h  game-logic.cpp  game.cpp  gamestates.cpp  gamestates.h  layers.cpp  layers.h
include/mse/: common.h  constants.h  core.h  defines.h  main.h  mse.h  protocore.h
include/mse/addons/arcade/: units.h
include/mse/systems/: canban.h
include/mse/systems/application/: application.h
include/mse/systems/cameras/: camera2D.h  camera_manager.h
include/mse/systems/ecs/: components.h  entity.h
include/mse/systems/ecs/components/: states.h
include/mse/systems/physics/: physics_API.h  physics_processor.h  world.h
include/mse/systems/platform/: platform.h
include/mse/systems/platform/audio/: chunk.h  sound.h  soundman.h  track.h
include/mse/systems/platform/events/: events.h
include/mse/systems/platform/input/: input.h
include/mse/systems/platform/renderer/: cursor.h  font.h  renderer.h  texture.h
include/mse/systems/presets/: units.h
include/mse/systems/resources/: resource_manager.h
include/mse/systems/scenes/: scene.h  scene_manager.h
include/mse/systems/windows/: window.h  window_manager.h
include/mse/systems/windows/layers/: layer.h  layer_manager.h
include/mse/systems/windows/layers/gui/: gui.h  guiitem.h
include/mse/systems/windows/layers/gui/items/: button.h  canvas.h  checkbox.h  image.h  scrollbar.h  slider.h  text.h  viewport.h
include/mse/utils/: fileio.h  logger.h  math.h  utils.h
source/mse/addons/arcade/: units.cpp
source/mse/systems/: canban.cpp
source/mse/systems/application/: application.cpp
source/mse/systems/cameras/: camera2D.cpp  camera_manager.cpp
source/mse/systems/ecs/: components.cpp
source/mse/systems/ecs/components/: states.cpp
source/mse/systems/physics/: physics_API.cpp  physics_processor.cpp  world.cpp
source/mse/systems/platform/: platform.cpp
source/mse/systems/platform/audio/: chunk.cpp  sound.cpp  soundman.cpp  track.cpp
source/mse/systems/platform/events/: events.cpp
source/mse/systems/platform/renderer/: cursor.cpp  font.cpp  renderer.cpp  texture.cpp
source/mse/systems/presets/: units.cpp
source/mse/systems/resources/: resource_manager.cpp
source/mse/systems/scenes/: scene.cpp  scene_manager.cpp
source/mse/systems/windows/: window.cpp  window_manager.cpp
source/mse/systems/windows/layers/: layer.cpp  layer_manager.cpp
source/mse/systems/windows/layers/gui/: guiitem.cpp
source/mse/systems/windows/layers/gui/items/: button.cpp  canvas.cpp  checkbox.cpp  image.cpp  scrollbar.cpp  slider.cpp  text.cpp  viewport.cpp
source/mse/utils/: fileio.cpp  logger.cpp
tests/: logger-testbed.cpp
